feature(view):implementation trips view
	Implementation of endpoint that to enable users view all available trips.
